2006-02-09  Dai Sato  <satodai@w3m.jp>

	* http://vimrc.hp.infoseek.co.jp/w3m-pclose.html
	* file.c: replace pclose with fclose in the end of uncompress_stream()

2005-02-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* configure.ac: rename from configure.in. this is for autoconf2.50

2005-02-27  NOMIYA Masaru <nomiya@ttmy.ne.jp>

	* [w3m-dev 04143] Patch for OS/2
	* config.h.in: ifdef HAVE_SETPGRP
	* configure.in: define USE_BINMODE_STREAM for *os2-emx*
	* islang.c: ULONG -> unsigned long
	* main.c: ULONG -> unsigned long

2005-02-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 01045] From newbie: problem with w3m-0.5.1 installation
	* acinclude.m4 (AC_W3M_SSL): define USE_SSL after ssl library found

2005-01-19  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 04133] mouse_end() should preced reset_tty()?
	* terms.c (reset_exit): mouse_end() should precede reset_tty()

2005-01-05  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 04130] [w3m-dev 04131] [w3m-dev 04132] Multiple challeges in *-Authenticate header
	* file.c (skip_auth_token): added
		(extract_auth_val): ',' is end of token
		(extract_auth_param): use skip_auth_token
		(AuthDigestCred): parse qop and calc cnonce correctly
		(findAuthentication): use skip_auth_token

2004-11-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load):
	  fix unused variable `i'
	* w3mimg/x11/x11_w3mimg.c (x11_load_image):
	  ditto

2004-11-09  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04128] Re: w3mimgdisplay
	* acinclude.m4 (AC_W3M_IMAGE): check not yes
	* aclocal.m4, configure: regen
	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): 
	   fb_image_fill in case GDK_PIXBUF_FRAME_DISPOSE
	* w3mimg/x11/x11_w3mimg.c (get_animation_size):
	   return n
	  (x11_load_image): 
	   fill in case GDK_PIXBUF_FRAME_DISPOSE

2004-11-05  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04117] Re: start attribute and value attribute on ordered lists